--- a/.maintain/chaostest/package.json
+++ b/.maintain/chaostest/package.json
@@ -11,7 +11,9 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "@kubernetes/client-node": "^0.11.1"
+    "@kubernetes/client-node": "^0.11.1",
+    "@polkadot/api": "^0.95.0-beta.14",
+    "@polkadot/keyring": "^1.6.0-beta.9"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
